--- a/src/app/admin/componente-categorias/componente-tabla-categorias/componente-tabla-categorias.component.html
+++ b/src/app/admin/componente-categorias/componente-tabla-categorias/componente-tabla-categorias.component.html
@@ -1,19 +1,27 @@
 <div class="container mt-3">
   <app-componente-sin-conexion *ngIf="!online; else contenidoOnline"></app-componente-sin-conexion>
 
-
-
   <ng-template #contenidoOnline>
-
     <div class="card shadow">
       <div class="card-body">
         <h5 class="card-title mb-3">Listado de Categorías</h5>
+       <!--  <input matInput disabled value="{{cantidadSeleccionados}}"> -->
+
 
         <!-- FILTRO -->
         <mat-form-field appearance="outline" class="w-100 mb-3">
           <mat-label>Buscar categoría</mat-label>
           <input matInput (keyup)="applyFilter($event)" placeholder="Buscar por ID o nombre" #input>
         </mat-form-field>
+
+        <!-- NUEVO BOTÓN DE ELIMINACIÓN MASIVA -->
+            <button
+              *ngIf="mostrarBotonEliminarMasivo"
+              (click)="eliminarCategoriasMasivamente()"
+              class="botonEliminar"
+              matTooltip="Eliminar todas las categorías seleccionadas">
+              <i class="bi bi-trash-fill"></i> Eliminar Seleccionadas
+            </button>
 
         <!-- Skeleton Loader -->
         <div *ngIf="isLoading" class="table-responsive">
@@ -39,42 +47,42 @@
                     <div class="skeleton skeleton-btn"></div>
                   </div>
                 </td>
+                <td>
+                  <div class="skeleton skeleton-text"></div>
+                </td>
               </tr>
             </tbody>
           </table>
         </div>
 
-        <!--  <div *ngIf="!isLoading && dataSource.data.length > 0" class="table-responsive"> -->
 
+        @if (!isLoading) {
         <table mat-table [dataSource]="dataSource" class="table table-striped">
 
           <!-- Position Column -->
           <ng-container matColumnDef="idRegistro">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <th mat-header-cell *matHeaderCellDef class="header-black"> No. </th>
             <td mat-cell *matCellDef="let element"> {{element.idCategoria}} </td>
           </ng-container>
 
           <!-- Name Column -->
           <ng-container matColumnDef="nombreCategoria">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <th mat-header-cell *matHeaderCellDef class="header-black"> Nombre </th>
             <td mat-cell *matCellDef="let element"> {{element.nombreCategoria}} </td>
           </ng-container>
 
-          <!-- Weight Column -->
           <ng-container matColumnDef="Acciones">
-            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <th mat-header-cell *matHeaderCellDef class="header-black"> Acciones </th>
             <td mat-cell *matCellDef="let element">
               <div class="d-flex gap-2">
 
-                <!-- Botón Editar -->
-                <button class="botonEditar" (click)="updateCategoria(element)">
+                <button [disabled]="mostrarBotonEliminarMasivo" class="botonEditar" (click)="updateCategoria(element)"
+                [matTooltip]="mostrarBotonEliminarMasivo ? 'No se puede editar el registro mientras eliminas' : 'Editar el registro'">
                   <i class="bi bi-pen"></i>
                 </button>
 
-                <!-- Botón Eliminar -->
-                <button class="botonEliminar" [disabled]="element.enUso"
-                  [matTooltip]="element.enUso ? 'Esta categoría está asignada a un producto. Elimine los productos primero.' : ''"
-                  (click)="deleteCategoria(element)">
+                <button [disabled]="element.enUso || mostrarBotonEliminarMasivo" [matTooltip]="element.enUso ? dato : 'Eliminar el registro'"
+                class="botonEliminar" (click)="deleteCategoria(element)">
                   <i class="bi bi-trash-fill"></i>
                 </button>
 
@@ -82,31 +90,39 @@
             </td>
           </ng-container>
 
-
+          <!-- Checkbox Column -->
+          <ng-container class="custom-checkbox" matColumnDef="EliminacionMasiva">
+            <th mat-header-cell *matHeaderCellDef matTooltip="Elima masivamente las categorias">
+              <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                [checked]="selection.hasValue() && isAllSelected()"
+                [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+              </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+              <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)" [disabled]="row.enUso"
+                [matTooltip]="row.enUso ? dato : ''">
+              </mat-checkbox>
+            </td>
+          </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-          <!-- No data -->
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell text-center" colspan="4">
-              No se encontró ningún producto con el término: <b> "{{ input.value }}"</b>
-            </td>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;">
           </tr>
+
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4" style="text-align: center;">No data matching the filter <b> "{{input.value}}" </b> </td>
         </table>
+
+
+        }
 
         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
           aria-label="Select page of periodic elements">
         </mat-paginator>
       </div>
-
-      <!-- Sin productos -->
-      <!--  <div *ngIf="!isLoading && !(dataSource.data.length > 0)" class="alert alert-danger text-center mt-3">
-          Por el momento no hay categorías disponibles.
-        </div> -->
-
-
-      <!-- </div> -->
     </div>
   </ng-template>
+
 </div>
