Se suben cambios nuevos de front 27/11/2025

--- a/src/app/shared/pie-de-pagina/pie-de-pagina.component.html
+++ b/src/app/shared/pie-de-pagina/pie-de-pagina.component.html
@@ -51,7 +51,7 @@
     </div>
   </footer>
   <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-    <p> <a class="perfilPersonal" href="https://krilingjaridcvprofesional.netlify.app/" target="_blank"> Realizado por: Ing. Kriling Jarid G.E</a></p>
+    <p> <a class="perfilPersonal" href="https://krilingjaridcvprofesional.netlify.app/" target="_blank"> Desarrollado por: Ing. Kriling Jarid G.E</a></p>
     <ul class="list-unstyled d-flex">
       <li class="ms-3"><a class="link-body-emphasis" href="https://www.instagram.com/cocintra_monica/"
           aria-label="Instagram"><i class="bi bi-instagram"></i></a>
