--- a/src/app/paginaInicial/home/home.component.html
+++ b/src/app/paginaInicial/home/home.component.html
@@ -219,9 +219,12 @@
 
 
   <section>
-    <div class="container mt-5">
+    <div class="container mt-5" style="text-align: center;">
       <hr class="featurette-divider" />
-      <app-componente-para-videos />
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/a-2Gx105d-4?si=70pqgKigx070oIbM"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </section>
 
