Se suben cambios nuevos de front en el formulario del login 08/12/2025

--- a/src/app/paginaInicial/home/home.component.html
+++ b/src/app/paginaInicial/home/home.component.html
@@ -218,7 +218,7 @@
   </section>
 
 
-  <section>
+ <!--  <section>
     <div class="container mt-5" style="text-align: center;">
       <hr class="featurette-divider" />
       <iframe width="560" height="315" src="https://www.youtube.com/embed/a-2Gx105d-4?si=70pqgKigx070oIbM"
@@ -226,7 +226,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-  </section>
+  </section> -->
 
 
   <section id="Provedores">
