--- a/src/app/shared/inicio-sesion-admins/inicio-sesion-admins.component.html
+++ b/src/app/shared/inicio-sesion-admins/inicio-sesion-admins.component.html
@@ -1,37 +1,38 @@
-
 <div class="centrar-pagina">
-<div class="login-container">
+  <div class="login-container">
 
-  <div class="login-box">
-    <h2 id="login">Iniciar Sesión</h2>
-    <form [formGroup]="formularioLogin">
-      <div class="input-group">
-        <label for="email">Nombre Usuario</label>
-        <input type="text" id="usuario" placeholder="Usuario" required
-        formControlName="username">
-      </div>
+    <div class="login-box">
+      <h2 id="login">Iniciar Sesión</h2>
+      <form [formGroup]="formularioLogin">
+        <div class="input-group">
+          <label for="email">Nombre Usuario</label>
+          <input type="text" id="usuario" placeholder="Usuario" required formControlName="username">
+        </div>
 
-      <div class="input-group">
-        <label for="password">Contraseña</label>
-        <input type="password" id="password" placeholder="********" required formControlName="password">
-      </div>
 
-      <button type="submit" (click)="login()">Ingresar</button>
 
-      <p class="signup-link">
-        ¿No tienes cuenta? <a routerLink="/paginaEnConstruccion">Regístrate</a>
-      </p>
-    </form>
+        <!-- INPUT DE CONTRASEÑA MEJORADO -->
+        <div class="input-group">
+          <label for="password">Contraseña</label>
+
+          <div class="password-wrapper">
+            <input [type]="mostrarPassword ? 'password' : 'text'" id="password" placeholder="********" required
+              formControlName="password" />
+
+            <button class="toggle-password-btn" type="button" (click)="mostrarPassword = !mostrarPassword">
+              <i class="bi" [ngClass]="mostrarPassword ? 'bi-eye-slash-fill':'bi-eye-fill' "></i>
+            </button>
+          </div>
+        </div>
+
+
+        <button class="ingresar" type="submit" (click)="login()">Ingresar</button>
+
+        <p class="signup-link">
+          ¿No tienes cuenta? <a routerLink="/paginaEnConstruccion">Regístrate</a>
+        </p>
+      </form>
+    </div>
   </div>
-</div>
 
 </div>
-
-
-
-
-
-
-
-
-
