Se suben cambios nuevos de front en el la tabla de las categorias 08/12/2025

--- a/src/app/admin/componente-categorias/componente-tabla-categorias/componente-tabla-categorias.component.html
+++ b/src/app/admin/componente-categorias/componente-tabla-categorias/componente-tabla-categorias.component.html
@@ -20,7 +20,7 @@
               (click)="eliminarCategoriasMasivamente()"
               class="botonEliminar"
               matTooltip="Eliminar todas las categorías seleccionadas">
-              <i class="bi bi-trash-fill"></i> Eliminar Seleccionadas
+              <i class="bi bi-trash-fill"></i> Eliminar Categorias Seleccionadas
             </button>
 
         <!-- Skeleton Loader -->
