--- a/src/app/shared/pagina-no-encontrada-2/pagina-no-encontrada-2.component.html
+++ b/src/app/shared/pagina-no-encontrada-2/pagina-no-encontrada-2.component.html
@@ -1,11 +1,10 @@
 <div class="error-container">
   <div style="text-align: center">
+    <img src="icons/buildPage.png" alt="" width="100%" height="500px">
     <div class="error-code">404</div>
-    <img src="icons/buildPage.png" alt="" width="100%">
-    <div class="error-message">Por el momento este servicio no esta disponible o se encuentra en construcción</div>
-    <!--   <a href="/" class="home-btn"
-    ><i class="fas fa-home"></i> Voltar para a página inicial do app My Note</a
-  > -->
+    <h2>Lo sentimos!!</h2>
+    <div class="error-message">Por el momento este servicio no se encuentra disponible</div>
+    <!--   <a href="/" class="home-btn"><i class="fas fa-home"></i> Voltar para a página inicial do app My Note</a> -->
     <button class=" home-btn" routerLink="/">Volver para la página incial</button>
   </div>
 </div>
