--- a/src/app/shared/componente-navbar/componente-navbar.component.html
+++ b/src/app/shared/componente-navbar/componente-navbar.component.html
@@ -1,9 +1,9 @@
-<header data-bs-theme="dark">
-  <nav id="navbar-example2" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg">
+<header data-bs-theme="dark"> <!-- shadow-lg -->
+  <nav id="navbar-example2" class="navbar navbar-expand-md  fixed-top  ">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
-        <img src="icons/Cocinas_Integrales_Monica.png" alt="Logo" width="56%" height="30%"
-          class="figura d-inline-block">
+        <img  src="icons/Cocinas_Integrales_Monica.png" alt="Logo" width="56%" height="30%"
+          class="figura d-inline-block logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,6 @@
           <li class="nav-item">
             <a class="nav-link active enlacesPrincipales" aria-current="page" href="#Productos">Nuestros Productos</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link active enlacesPrincipales" aria-current="page" href="#Adquiere">Adquiere tu Cocina</a>
           </li>
@@ -35,6 +34,7 @@
           </li>
 
         </ul>
+        <!-- btn btn-outline-primary -->
         <button class="btn btn-outline-primary" routerLink="/login" routerLinkActive="active"
           ariaCurrentWhenActive="page">Iniciar sesión</button>
       </div>
