Se suben nuevos cambios en el front

--- a/src/app/admin/componente-mi-perfil/componente-mi-perfil.component.html
+++ b/src/app/admin/componente-mi-perfil/componente-mi-perfil.component.html
@@ -1,3 +1,9 @@
 <div class="container">
   <app-componente-en-construccion/>
+  <!--  <h1>Mi cuenta</h1>
+
+   <form action="">
+    <label for="nombreAdmin">Nombre:</label>
+    <input type="text" >
+   </form> -->
 </div>
