--- a/src/app/admin/componente-navegacion/componente-navegacion.component.html
+++ b/src/app/admin/componente-navegacion/componente-navegacion.component.html
@@ -59,7 +59,8 @@
             <a class="dropdown-item" type="button" (click)="questionUser()">
               <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
             </a>
-          </li>
+              <li>
+            <a class="dropdown-item" routerLink="/admin/pedidos"><i class="bi bi-box-arrow-right"></i> Ver Pedidos</a></li>
         </ul>
       </div>
     </div>
